[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xnat_toolbox"
description = "Tools and helpers used in XNAT scripting."
authors = [
    {name = "Keenan W. Wilkinson", email = "keenanwilkinson@outlook.com"}
]
license = { text = "MIT" }
dynamic = ["version", "dependencies"]

[project.scripts]
actions = "xnat_toolbox.actions:main_cli"

[options]
exclude = ["tests"]

[tool.setuptools.dynamic]
version = { attr = "xnat_toolbox.__version__" }
dependencies = { file = "requirements.txt" }
